# EuclidMocksPipeline

./: README.md  new_README.md  quick.sh  requirements.txt  setup.cfg  setup.py  tox.ini
Pipeline/: applyFootprintToMasterCatalog.py  createFootprint.py  createIndicesForSats.py  createSmoothHOD.py  extractGalaxyCatalogFromMaster.py
euclid_obssys/: NFW.py  __init__.py  disk.py  filenames.py  input_generator.py  match_pinocchio_masses.py  pinocchio.py  sdhod.py  time.py
euclid_obssys/pipeline/: __init__.py
euclid_obssys/templates/: input.py  sel_input.py
euclid_obssys/tool/: __init__.py  __main__.py  apply_footprint.py  create_footprint.py  create_fulloctant_footprint.py  create_pk_scripts.py  create_selection.py  dn_dz.py  extract.py  footprint.py  hod.py  hod_pinocchio.py  indices_for_sats.py  input_generator.py  numbercounts.py  random.py  run.py  setup_repo.py  writeCatalogs4LE3.py
euclid_obssys/view/: __init__.py  angular_map.py  dn_dz.py  run.py  visualizeHOD.py
notebooks/: EuclidLarge.ipynb
scripts/: createSDHOD_Catalog.py  euclidGenerateInput.py
src/euclid_obssys/: config.py  disk.py  input_generator.py  pozzettiLF.py  sdhod.py  utils.py
src/euclid_obssys/templates/: input.py
src/euclid_obssys/tool/: __init__.py  __main__.py  apply_footprint.py  create_footprint.py  create_fulloctant_footprint.py  create_selection.py  dn_dz.py  extract.py  footprint.py  hod.py  hod_pinocchio.py  indices_for_sats.py  input_generator.py  numbercounts.py  random.py  run.py  writeCatalogs4LE3.py
src/euclid_obssys/view/: __init__.py  dn_dz.py  (+3 more)
tests/: test_disk.py
