[metadata]
name=euclid-observation-systematics
version=0.0.2
author=Pierluigi Monacoi <pierluigi.monaco@inaf.it>, Tiago Castro, Guilhem Lavaux <guilhem.lavaux@iap.fr>
author_email=pierluigi.monaco@inaf.it
long_description=file: README.md
long_description_content_type=text/markdown
description=A small example package
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
url=https://github.com/pypa/sampleproject

[options]
python_requires = >3.6
packages = find:
package_dir =
   = src
include_package_data = True
install_requires =
  numpy>=1.20
  colossus
  scipy
  healpy 
  astropy
  fire
setup_requires =
  pytest-runner

tests_require =
  pytest

[options.entry_points]
console_scripts =
    obssys = euclid_obssys.tool.run:run_tool

[options.package_data]
euclid_obssys =
  templates/input.py
  templates/eden_template.sh
  templates/parameters_PK_template.ini
  templates/sel_input.py

[options.packages.find]
where=.
